--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "avltree-js",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "speedTest": "node ./speedTest/speedTest.js"
   },
   "repository" :
   { "type" : "git"
