--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "avltree-js",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository" :
   { "type" : "git"
-  , "url" : "https://github.com/Tatsujinichi/avltree-js.git"
+  , "url" : "https://github.com/Wizcorp/avltree-js.git"
   },
   "author": "John Ferreira",
   "license": "MIT"
